<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_grey"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cricketTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cricket"
            android:textColor="@color/white"
            android:layout_margin="@dimen/_10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/scorerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scorer"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_5dp"
            app:layout_constraintStart_toEndOf="@id/cricketTV"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settingsIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5dp"
            android:src="@drawable/baseline_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/notificationIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10dp"
            android:src="@drawable/baseline_notifications_24"
            app:layout_constraintEnd_toStartOf="@id/settingsIV"
            app:layout_constraintTop_toTopOf="@id/settingsIV"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/teamsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teams"
        android:textColor="@color/color_blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/headerLL"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/hostCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:layout_margin="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/teamsTV"
        app:layout_constraintStart_toStartOf="@id/teamsTV">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/hostTeamET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Host Team"
            android:layout_margin="@dimen/_10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/visitorTeamET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Visitor Team"
            android:layout_margin="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/hostTeamET"
            app:layout_constraintStart_toStartOf="@id/hostTeamET"

            />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tossTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toss_won_by"
        android:textColor="@color/color_blue"
        android:layout_marginTop="@dimen/_10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/hostCard"
        app:layout_constraintStart_toStartOf="@id/teamsTV"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/hostRgCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        app:cardCornerRadius="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/tossTV"
        app:layout_constraintStart_toStartOf="@id/tossTV"
        >
        <RadioGroup
            android:id="@+id/hostRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/hostRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Host Team"/>
            <RadioButton
                android:id="@+id/visitorRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Visitor Team"/>
        </RadioGroup>

    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/optToTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opt_to"
        android:textColor="@color/color_blue"
        android:layout_marginTop="@dimen/_10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/hostRgCard"
        app:layout_constraintStart_toStartOf="@id/teamsTV"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/optCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        app:cardCornerRadius="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        android:layout_margin="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/optToTV"
        app:layout_constraintStart_toStartOf="@id/optToTV"
        >
        <RadioGroup
            android:id="@+id/batBallRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/batRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bat"/>
            <RadioButton
                android:id="@+id/ballRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ball"/>
        </RadioGroup>

    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/oversTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overs"
        android:textColor="@color/color_blue"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/optCard"
        app:layout_constraintStart_toStartOf="@id/teamsTV"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/oversCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:layout_margin="@dimen/_10dp"
        android:elevation="@dimen/_10dp"
        app:cardCornerRadius="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/oversTV"
        app:layout_constraintStart_toStartOf="@id/oversTV">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/oversET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="overs"
                android:layout_margin="@dimen/_10dp"
                />
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/advSettingsBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adv_settings"
        android:textColor="@color/white"
        android:padding="@dimen/_20dp"
        android:background="@drawable/button_card"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="@id/teamsTV"
        app:layout_constraintTop_toBottomOf="@id/oversCard"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startMatchBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_match"
        android:textColor="@color/white"
        android:padding="@dimen/_20dp"
        android:background="@drawable/button_card"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/advSettingsBTN"/>



</androidx.constraintlayout.widget.ConstraintLayout>